# physim

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  charged_particles.cpp  solar_system.cpp
include/: collision.h  forces.h  integrators.h  octree.h  particle.h  simulation.h  vector3.h
python/: bindings.cpp
src/: collision.cpp  forces.cpp  integrators.cpp  particle.cpp  simulation.cpp
tests/: CMakeLists.txt  test_simulation.cpp  test_vector.cpp
